2004-04-26  Ted Gould  <ted@gould.cx>

	* share/extensions/ai_input.inkmod, share/extensions/dia.inkmod,
	share/extensions/txt2svg.inkmod, src/extension/extension.cpp,
	src/extension/internal/svg.cpp:

	Making the names of the input extensions look like the output ones.
	Also, threw in a slight memory savings in removing the implementation on
	deactivated extensions.

2004-04-26  MenTaLguY  <mental@rydia.net>

	* src/selection.cpp: migrate to new glib idle API

	* src/extension/db.cpp: can't call ->deactivated() on a NULL pointer..

2004-04-26  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* configure.in: Replace use of old AM_PROG_LIBTOOL macro with
	  AC_PROG_LIBTOOL.

2004-04-26  Ted Gould  <ted@gould.cx>

	* share/extensions/epsi_output.inkmod:

	Added in a check for ps2epsi

	* src/dialogs/filedialog.cpp, src/extension/db.cpp, src/extension/db.h,
	src/extension/extension.cpp, src/extension/extension.h,
	src/extension/init.cpp, src/extension/system.cpp:

	Implementing a 'deactivated' extension.  This means that it should
	still exist, but show up as insensitive in any GUI element that could use
	it.  The idea here is that users should know what they don't have, but
	Inkscape supports.

2004-04-26 Nathan Hurst <njh@mail.csse.monash.edu.au>

	* src/{libnr,libnrtype,widgets,display,helper,.}*.{h,cpp}: moved
	from typedef _name name; to C++ style struct name; forward
	references.
	
2004-04-25  Ted Gould  <ted@gould.cx>

	* share/extensions/ai_output.inkmod, share/extensions/dia.inkmod,
	share/extensions/dropshadow.inkmod, share/extensions/epsi_output.inkmod,
	share/extensions/roundhole.inkmod, share/extensions/svgz_input.inkmod,
	share/extensions/svgz_output.inkmod, share/extensions/txt2svg.inkmod,
	src/extension/implementation/script.cpp,
	src/extension/implementation/script.h:

	Adding in support for superior checking of dependencies.  Now scripts
	can include a line, which will look for a binary in the path.  So