@@ -1,3 +1,8 @@
+2004-04-27  Carl Hetherington <inkscape@carlh.net>
+
+	* src/desktop.cpp: Check for there being no items when zooming to
+	the drawing.  This fixes bug #942137.
+
 2004-04-26  Ted Gould  <ted@gould.cx>
 
 	* share/extensions/ai_input.inkmod, share/extensions/dia.inkmod,
